fix: fix pictures `z-index`

--- a/client/src/styles/invite/partials/_contents.scss
+++ b/client/src/styles/invite/partials/_contents.scss
@@ -256,9 +256,9 @@
         }
 
         &-pictures {
-            display: flex;
             flex-direction: column;
-            z-index: 10;
+            justify-content: center;
+            z-index: 12;
 
             &.active {
                 ~ .fix-address {
